vlib/v/checker/tests/struct_init_update_type_err.vv
struct Foo {
	name string
	age int
}

struct Foo2 {}

fn main() {
	i := 2
	_ := Foo{
		...i
		name: 'f2'
	}
	_ = Foo{
		...&i
	}
	f2 := Foo2{}
	_ = Foo{
		...f2
	}
	_ = Foo{
		...Foo{}
	}
}

